Fix: Fixed the last row of the input area is cropped in half (#45)

--- a/src/chrome.css
+++ b/src/chrome.css
@@ -689,6 +689,7 @@
 .CodeMirror-scroll {
   margin-top: 9px !important;
   padding-left: 8px !important;
+  padding-bottom: 0px !important;
 }
 .CodeMirror-sizer {
   padding-left: 0 !important;
